src/test/ui/unsized/unsized-enum.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/unsized-enum.rs:6:36
   |
LL | enum Foo<U> { FooSome(U), FooNone }
   |          - required by this bound in `Foo`
LL | fn foo1<T>() { not_sized::<Foo<T>>() } // Hunky dory.
LL | fn foo2<T: ?Sized>() { not_sized::<Foo<T>>() }
   |         -                          ^^^^^^ doesn't have a size known at compile-time
   |         |
   |         this type parameter needs to be `std::marker::Sized`
   |
help: you could relax the implicit `Sized` bound on `U` if it were used through indirection like `&U` or `Box<U>`
  --> $DIR/unsized-enum.rs:4:10
   |
LL | enum Foo<U> { FooSome(U), FooNone }
   |          ^            - ...if indirection was used here: `Box<U>`
   |          |
   |          this could be changed to `U: ?Sized`...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
